kubernetes/rendered/staging/infrastructure/ingress-nginx/v1_namespace_ingress-nginx.yaml
# Source: ingress-nginx-wrapper/templates/Namespace.ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
